# HardsciSandbox

./: Cargo.toml
src/: main.rs  spacecraft.rs
src/_depr/: vector.rs
src/_depr/astro/: frame.rs
src/astro/: frame.rs  orbit.rs
src/engine/math/: pga3d_float.rs
src/math/: kinematics.rs  primitives.rs  vector.rs
