[package]
name = "HardsciSandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"

#	Math
az = "1.3.0"
fixed = "1.29.0"
fixed_trigonometry = "0.4.4"

#derive_more = "2.1.1"
#num-traits = "0.2.19"

#   Scripting
#mlua = { version="0.11.4", features=["lua54", "vendored"] }

#	Extras
#paste = "1.0.15"

